UCSFD8-926 fixed the z-index for menu panel so that News&Media menu panel stays tucked behind the quick links panel in iPad landscape mode

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1748,7 +1748,7 @@ a.icon-transit:hover {
     background: #f2f4f6;
     height: auto;
     right: 0;
-    z-index: 1000;
+    z-index: 780;
     width: 800px; }
     @media (min-width: 1050px) {
       [block="block-ucsf-main-menu-desktop"] .menu-child--wrapper {
