--- a/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
+++ b/docroot/themes/custom/ucsf/scss/navigation/_main-menu.scss
@@ -176,7 +176,8 @@ header .menu--main {
     background: $c-grey-pale;
     height: auto;
     right: 0;
-    z-index: $z-dropdown;
+    // position open menu panel behind open quicklinks panel
+    z-index: $z-quicklinks-open-page;
     width: 800px;
 
     @include breakpoint($new-large) {
